# innowise_trainee

./: .black  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO  consts.py  pyproject.toml
TASKS/: consts.py
TASKS/task-2/: task-2-snowflake.sql
TASKS/task-3/: assignment_numpy.ipynb
TASKS/task-4/: README.md  TODO  cli_main.py  executer.py  main.py  reporter.py
TASKS/task-4/data_manager/: executer.py  reporter.py
TASKS/task-4/handlers/: __init__.py  db_handler.py  json_handler.py
TASKS/task-4/sql/: create_indexes.sql  queries.sql  students-schema.sql
TASKS/task_2/: task-2-postgre.sql
TASKS/task_3/: assignment_pandas.ipynb
TASKS/task_4/: README.md  cli_main.py  main.py
TASKS/task_4/data_manager/: __init__.py  executer.py  reporter.py
TASKS/task_4/handlers/: __init__.py  (+2 more)
TASKS/task_5/: TODO  docker.py  log4j2.properties  main.py  solution.py  test.py
TASKS/task_6/: README.md  TODO
docker_compose/pagila_docker/: docker-compose.yml
docker_compose/snowflake_docker/: docker-compose.yml
docker_compose/spark_docker/: docker-compose.yml
docker_compose/students_docker/: docker-compose.yml
resources/json/: report.json
resources/xml/: report.xml
task-1/: task-1.sql
task-2/: task-2-postgre.sql  task-2-snowflake.sql
task-3/: assignment_numpy.ipynb  assignment_pandas.ipynb  consts.py
tests/task_4/: test_db_handler.py  test_executer.py  test_json_handler.py  test_reporter.py
tests/task_5/: test_spark_connection.py  test_spark_handler.py
utils/design/: beauty.py  console.py  developer.py  message.py
utils/graphic/: builder.py
(+10 files in other folders)
