[project]
name = "innowise-bigdata-trainee-tasks"
version = "0.1.0"
description = "Different tasks from Innowise to learn some new technologies in BigData"
authors = [
    {name = "Stanislav Panfilenko", email = "stanislav.panfilenko@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click==8.3.0",
    "colorama==0.4.6",
    "et==0.0.2",
    "mccabe==0.7.0",
    "mypy_extensions==1.1.0",
    "numpy==2.3.4",
    "packaging==25.0",
    "pandas==2.3.3",
    "pandas-stubs==2.3.2.250926",
    "pathspec==0.12.1",
    "platformdirs==4.5.0",
    "psycopg2-binary==2.9.11",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytokens==0.2.0",
    "pytz==2025.2",
    "scipy==1.16.2",
    "six==1.17.0",
    "snowballstemmer==3.0.1",
    "tzdata==2025.2",
    "seaborn (>=0.13.2,<0.14.0)",
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.poetry.group.dev.dependencies]
black = "25.9.0"
flake8 = "7.3.0"
flake8-docstrings = "1.7.0"
flake8-import-order = "0.19.2"
pycodestyle = "2.14.0"
pydocstyle = "6.3.0"
pyflakes = "3.4.0"
isort = "5.13.2"
pre-commit = "3.8.0"

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.flake8]
max-line-length = 88
exclude = ".venv,build,dist"
ignore = "E203, W503"

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["innowise_bigdata_trainee_tasks"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
